--- a/cart.html
+++ b/cart.html
@@ -80,7 +80,7 @@
          </div>
          <div class="price_details">
             <h1>Delivery Charges</h1>
-            <h2 class="original_price">$40 <span>Free</span></h2>
+            <h2> <span class="original_price">$40</span> Free</h2>
          </div>
          <hr>
          <div class="price_details">
